[package]
name = "pdf-service-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
printpdf = "0.8"
textwrap = "0.16"
thiserror = "2"
tower-http = { version = "0.5", features = ["cors"] }
